--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -29,7 +29,7 @@ text = Поставь на зарядку электросамокат
 
 [CalendarBlock]
 fontname = FreeSans
-fontsize = 100
+fontsize = 180
 fontbold = True
 fontitalic = False
 position = 70
@@ -54,21 +54,21 @@ crit = 1200
 warncolor = (255, 255, 0)
 critcolor = (255, 63, 63)
 co2fontname = FreeSans
-co2fontsize = 80
+co2fontsize = 120
 co2fontbold = True
 co2fontitalic = False
 tempfontname = FreeSans
-tempfontsize = 80
+tempfontsize = 120
 tempfontbold = True
 tempfontitalic = False
 co2pos = (52,30)
-temppos = (150,120)
+temppos = (150,160)
 
 [MAIN]
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Time, Swap, YandexNews, Voice, Alarm
+blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -141,7 +141,7 @@ blocklist = Calendar, YandexWeather, MT8057
 
 [TimeBlock]
 fontname = FreeSans
-fontsize = 350
+fontsize = 500
 fontbold = True
 fontitalic = False
 
@@ -191,12 +191,12 @@ windfontitalic = False
 
 [YandexNewsBlock]
 fontname = FreeSans
-fontsize = 32
+fontsize = 52
 fontbold = False
 fontitalic = False
 url = https://news.yandex.ru/index.rss
 updatetime = 15
-position = 540
+position = 740
 indent = 7
 rows = 5
 
@@ -208,13 +208,13 @@ lon = 37.472534
 folder = weather
 iconscale = (200,200)
 iconpos = (0,0)
-weathertypepos = (260,180)
+weathertypepos = (260,220)
 temperaturepos = (240,20)
-humiditypos = (500,70)
-pressurepos = (500,120)
-windpos = (500,20)
+humiditypos = (600,90)
+pressurepos = (600,160)
+windpos = (600,20)
 weathertypefontname = FreeSans
-weathertypefontsize = 40
+weathertypefontsize = 80
 weathertypefontbold = True
 weathertypefontitalic = False
 temperaturefontname = FreeSans
@@ -222,15 +222,15 @@ temperaturefontsize = 140
 temperaturefontbold = True
 temperaturefontitalic = False
 humidityfontname = FreeSans
-humidityfontsize = 40
+humidityfontsize = 50
 humidityfontbold = False
 humidityfontitalic = False
 pressurefontname = FreeSans
-pressurefontsize = 40
+pressurefontsize = 50
 pressurefontbold = False
 pressurefontitalic = False
 windfontname = FreeSans
-windfontsize = 40
+windfontsize = 50
 windfontbold = False
 windfontitalic = False
 
