--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -1,5 +1,5 @@
 [AlarmBlock]
-list = AlarmWork, AlarmVoice, AlarmElectroScooter
+list = AlarmWork, AlarmVoice
 blocklist = Time, Swap, YandexNews
 
 [AlarmWork]
@@ -17,15 +17,6 @@ time = 07:25:00
 weekday = 0, 1, 2, 3, 4
 duration = 5
 module = Voice
-
-[AlarmElectroScooter]
-type = 5
-time = 22:00:00
-weekday = 0, 1, 2, 3, 6
-duration = 5
-backgroundcolor = (200, 0, 0)
-foregroundcolor = (57, 249, 115)
-text = Поставь на зарядку электросамокат
 
 [CalendarBlock]
 fontname = FreeSans
@@ -147,6 +138,7 @@ fontitalic = False
 
 [VoiceBlock]
 speaker = omazh
+speed = 2.0
 key = <YANDEXVOICE_KEY>
 blocklist = Time, Swap, YandexNews
 
