--- a/setting_win.ini
+++ b/setting_win.ini
@@ -56,6 +56,7 @@ co2pos = (52,32)
 temppos = (130,180)
 
 [MAIN]
+fullscreen = False
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
