--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -82,7 +82,7 @@ jobs:
         sed -i -e 's/<YANDEXVOICE_KEY>/'${YANDEX_VOICE_KEY}'/g' setting_win.ini
         sed -i -e 's/<WUNDERGROUND_KEY>/'${WUNDERGROUND_KEY}'/g' setting_win.ini
         # zip
-        zip build -R ext modules music weather "*.py" "*.ini" "*.sh" "*.cmd" "*.mp3" "*.png" ".gif" -x test/*
+        zip build -R ext modules music weather "*.py" "*.ini" "*.sh" "*.cmd" "*.txt" "*.mp3" "*.png" ".gif" -x test/*
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1.0.0
