--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -24,13 +24,13 @@ fontname = Helvetica
 fontsize = 70
 fontbold = True
 fontitalic = False
-temperaturetext = Температура {0:.1f}
-humiditytext = Влажность {1:.0f}
-pressuretext = Давление {2:.0f}
+temperaturetext = РўРµРјРїРµСЂР°С‚СѓСЂР° {0:.1f}
+humiditytext = Р’Р»Р°Р¶РЅРѕСЃС‚СЊ {1:.0f}
+pressuretext = Р”Р°РІР»РµРЅРёРµ {2:.0f}
 temperaturepos = (100,10)
 humiditypos = (100,100)
 pressurepos = (100,190)
-formattext = Тепература={0:.0f}, Влажность={1:.0f}, Давление={2:.0f}
+formattext = РўРµРїРµСЂР°С‚СѓСЂР°={0:.0f}, Р’Р»Р°Р¶РЅРѕСЃС‚СЊ={1:.0f}, Р”Р°РІР»РµРЅРёРµ={2:.0f}
 
 [CalendarBlock]
 fontname = Helvetica
@@ -66,8 +66,8 @@ tempfontname = Helvetica
 tempfontsize = 100
 tempfontbold = True
 tempfontitalic = False
-co2pos = (380,32)
-temppos = (460,180)
+co2pos = (369,32)
+temppos = (456,180)
 
 [MAIN]
 fullscreen = True
