--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -54,6 +54,9 @@ tempfontbold = True
 tempfontitalic = False
 co2pos = (52,30)
 temppos = (150,160)
+co2text = Концентрация CO2: {0}
+temperaturetext = Температура: {1:+.1f}°
+formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
 
 [MAIN]
 fullscreen = True
