--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -59,15 +59,18 @@ crit = 1200
 warncolor = (255, 255, 0)
 critcolor = (255, 63, 63)
 co2fontname = Helvetica
-co2fontsize = 100
+co2fontsize = 140
 co2fontbold = True
 co2fontitalic = False
 tempfontname = Helvetica
-tempfontsize = 100
+tempfontsize = 140
 tempfontbold = True
 tempfontitalic = False
-co2pos = (369,32)
-temppos = (456,180)
+co2pos = (132,32)
+temppos = (254,180)
+co2text = Концентрация CO2: {0}
+temperaturetext = Температура: {1:+.1f}°
+formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
 
 [MAIN]
 fullscreen = True
