--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -24,7 +24,7 @@ fontname = Helvetica
 fontsize = 70
 fontbold = True
 fontitalic = False
-temperaturetext = Температура {0:.1f}
+temperaturetext = Температура {0:+.1f}°
 humiditytext = Влажность {1:.0f}
 pressuretext = Давление {2:.0f}
 temperaturepos = (100,10)
@@ -153,6 +153,8 @@ fontname = Helvetica
 fontsize = 400
 fontbold = True
 fontitalic = False
+format = {:%H:%M}
+formattext = Московское время {:%H:%M}
 
 [VoiceBlock]
 speaker = omazh
