--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -211,6 +211,7 @@ updatetime = 15
 position = 740
 indent = 7
 rows = 5
+formattext = Новости от Яндекса. %s
 
 [YandexWeatherBlock]
 updatetime = 15
