--- a/setting_win.ini
+++ b/setting_win.ini
@@ -18,6 +18,20 @@ weekday = 0, 1, 2, 3, 4
 duration = 5
 module = Voice
 
+[BME280Block]
+address = 118
+fontname = Helvetica
+fontsize = 70
+fontbold = True
+fontitalic = False
+temperaturetext = T  {0:+.1f}°
+humiditytext = RH {1:.0f}
+pressuretext = p {2:.0f}
+temperaturepos = (100,10)
+humiditypos = (100,100)
+pressurepos = (100,190)
+formattext = Температура={0:.0f}, Влажность={1:.0f}, Давление={2:.0f}
+
 [CalendarBlock]
 fontname = Helvetica
 fontsize = 170
@@ -52,15 +66,18 @@ tempfontname = Helvetica
 tempfontsize = 100
 tempfontbold = True
 tempfontitalic = False
-co2pos = (52,32)
-temppos = (130,180)
+co2pos = (380,32)
+temppos = (460,180)
+co2text = Концентрация CO2: {0}
+temperaturetext = Температура: {1:+.1f}°
+formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
 
 [MAIN]
-fullscreen = False
+fullscreen = True
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, IR
+blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -128,14 +145,16 @@ windfontbold = False
 windfontitalic = False
 
 [SwapBlock]
-updatetime = 10
-blocklist = Calendar, MT8057, YandexWeather
+updatetime = 5
+blocklist = Calendar, MT8057, YandexWeather, BME280, OpenWeatherMap
 
 [TimeBlock]
 fontname = Helvetica
-fontsize = 384
+fontsize = 400
 fontbold = True
 fontitalic = False
+format = {:%H:%M}
+formattext = Московское время {:%H:%M}
 
 [VoiceBlock]
 speaker = omazh
@@ -184,14 +203,15 @@ windfontitalic = False
 
 [YandexNewsBlock]
 fontname = Helvetica
-fontsize = 48
+fontsize = 52
 fontbold = False
 fontitalic = False
 url = https://news.yandex.ru/index.rss
 updatetime = 15
-position = 670
+position = 720
 indent = 7
 rows = 5
+formattext = Новости от Яндекса. %s
 
 [YandexWeatherBlock]
 updatetime = 15
@@ -200,12 +220,12 @@ lat = 55.783265
 lon = 37.472534
 folder = weather
 iconscale = (220,220)
-iconpos = (0,0)
-weathertypepos = (260,242)
-temperaturepos = (240,50)
-humiditypos = (620,98)
-pressurepos = (620,170)
-windpos = (620,26)
+iconpos = (100,0)
+weathertypepos = (360,242)
+temperaturepos = (360,50)
+humiditypos = (700,98)
+pressurepos = (700,170)
+windpos = (700,26)
 weathertypefontname = Helvetica
 weathertypefontsize = 64
 weathertypefontbold = True
