--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -211,6 +211,7 @@ updatetime = 15
 position = 720
 indent = 7
 rows = 5
+formattext = Новости от Яндекса. %s
 
 [YandexWeatherBlock]
 updatetime = 15
