--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -38,6 +38,8 @@ fontsize = 170
 fontbold = True
 fontitalic = False
 position = 80
+format = {3} {0} {1} {2}
+formattext = {4}, {0} {1} {2} год
 
 [IRBlock]
 key_0 = Voice,
