--- a/setting_win.ini
+++ b/setting_win.ini
@@ -21,16 +21,16 @@ module = Voice
 [BME280Block]
 address = 118
 fontname = Helvetica
-fontsize = 70
+fontsize = 120
 fontbold = True
 fontitalic = False
-temperaturetext = T  {0:+.1f}°
-humiditytext = RH {1:.0f}
-pressuretext = p {2:.0f}
-temperaturepos = (100,10)
-humiditypos = (100,100)
-pressurepos = (100,190)
-formattext = Температура={0:.0f}, Влажность={1:.0f}, Давление={2:.0f}
+temperaturetext = Температура {0:+.1f}°
+humiditytext = Влажность {1:.0f}, Давление {2:.0f}
+pressuretext = 
+temperaturepos = (400,10)
+humiditypos = (100,200)
+pressurepos = (0,0)
+formattext = Температура {0:+.0f}, Влажность {1:.0f}, Давление {2:.0f}
 
 [CalendarBlock]
 fontname = Helvetica
@@ -38,6 +38,8 @@ fontsize = 170
 fontbold = True
 fontitalic = False
 position = 80
+format = {3} {0} {1} {2}
+formattext = {4}, {0} {1} {2} год
 
 [IRBlock]
 key_0 = Voice,
@@ -73,7 +75,7 @@ temperaturetext = Температура: {1:+.1f}°
 formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
 
 [MAIN]
-fullscreen = True
+fullscreen = False
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
@@ -146,7 +148,7 @@ windfontitalic = False
 
 [SwapBlock]
 updatetime = 5
-blocklist = Calendar, MT8057, YandexWeather, BME280, OpenWeatherMap
+blocklist = Calendar, BME280, OpenWeatherMap, YandexWeather
 
 [TimeBlock]
 fontname = Helvetica
@@ -168,38 +170,6 @@ starttime = 09:00:00
 finishtime = 19:00:00
 updatetime = 60
 path = bash /home/pi/DashBoard/webcam.sh
-
-[WunderGroundBlock]
-updatetime = 15
-key = <WUNDERGROUND_KEY>
-folder = weather
-iconscale = (220,220)
-iconpos = (0,0)
-weathertypepos = (260,242)
-temperaturepos = (240,50)
-humiditypos = (620,98)
-pressurepos = (620,170)
-windpos = (620,26)
-weathertypefontname = Helvetica
-weathertypefontsize = 64
-weathertypefontbold = True
-weathertypefontitalic = False
-temperaturefontname = Helvetica
-temperaturefontsize = 160
-temperaturefontbold = True
-temperaturefontitalic = False
-humidityfontname = Helvetica
-humidityfontsize = 64
-humidityfontbold = False
-humidityfontitalic = False
-pressurefontname = Helvetica
-pressurefontsize = 64
-pressurefontbold = False
-pressurefontitalic = False
-windfontname = Helvetica
-windfontsize = 64
-windfontbold = False
-windfontitalic = False
 
 [YandexNewsBlock]
 fontname = Helvetica
