--- a/setting_win.ini
+++ b/setting_win.ini
@@ -33,13 +33,15 @@ pressurepos = (0,0)
 formattext = Температура {0:+.0f}, Влажность {1:.0f}, Давление {2:.0f}
 
 [CalendarBlock]
+formattext = {4}, {0} {1} {2} год
+text = {3} {0} {1} {2}
 fontname = Helvetica
 fontsize = 170
 fontbold = True
 fontitalic = False
-position = 80
-format = {3} {0} {1} {2}
-formattext = {4}, {0} {1} {2} год
+pos = (960, 80)
+alignx = Center
+aligny = Top
 
 [IRBlock]
 key_0 = Voice,
@@ -60,19 +62,23 @@ warn = 800
 crit = 1200
 warncolor = (255, 255, 0)
 critcolor = (255, 63, 63)
+formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
+co2text = Концентрация CO2: {0}
 co2fontname = Helvetica
-co2fontsize = 100
+co2fontsize = 140
 co2fontbold = True
 co2fontitalic = False
+co2pos = (960, 60)
+co2alignx = Center
+co2aligny = Top
+temptext = 
 tempfontname = Helvetica
 tempfontsize = 100
 tempfontbold = True
 tempfontitalic = False
-co2pos = (380,32)
-temppos = (460,180)
-co2text = Концентрация CO2: {0}
-temperaturetext = Температура: {1:+.1f}°
-formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
+temppos = (0, 0)
+tempalignx = Left
+tempaligny = Top
 
 [MAIN]
 fullscreen = False
@@ -148,7 +154,7 @@ windfontitalic = False
 
 [SwapBlock]
 updatetime = 5
-blocklist = Calendar, BME280, OpenWeatherMap, YandexWeather
+blocklist = Calendar, BME280, MT8057, OpenWeatherMap, YandexWeather
 
 [TimeBlock]
 fontname = Helvetica
