--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -33,13 +33,15 @@ pressurepos = (100,190)
 formattext = Тепература={0:.0f}, Влажность={1:.0f}, Давление={2:.0f}
 
 [CalendarBlock]
+formattext = {4}, {0} {1} {2} год
+text = {3} {0} {1} {2}
 fontname = Helvetica
 fontsize = 170
 fontbold = True
 fontitalic = False
-position = 80
-format = {3} {0} {1} {2}
-formattext = {4}, {0} {1} {2} год
+pos = (960, 80)
+alignx = Center
+aligny = Top
 
 [IRBlock]
 key_0 = Voice,
@@ -60,19 +62,23 @@ warn = 800
 crit = 1200
 warncolor = (255, 255, 0)
 critcolor = (255, 63, 63)
+formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
+co2text = Концентрация CO2: {0}
 co2fontname = Helvetica
 co2fontsize = 140
 co2fontbold = True
 co2fontitalic = False
+co2pos = (960, 60)
+co2alignx = Center
+co2aligny = Top
+temptext = 
 tempfontname = Helvetica
 tempfontsize = 140
 tempfontbold = True
 tempfontitalic = False
-co2pos = (132,32)
-temppos = (254,180)
-co2text = Концентрация CO2: {0}
-temperaturetext = Температура: {1:+.1f}°
-formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
+temppos = (0, 0)
+tempalignx = Left
+tempaligny = Top
 
 [MAIN]
 fullscreen = True
@@ -147,7 +153,7 @@ windfontbold = False
 windfontitalic = False
 
 [SwapBlock]
-updatetime = 10
+updatetime = 5
 blocklist = Calendar, MT8057, YandexWeather, BME280
 
 [TimeBlock]
@@ -170,38 +176,6 @@ starttime = 09:00:00
 finishtime = 19:00:00
 updatetime = 60
 path = bash /home/pi/DashBoard/webcam.sh
-
-[WunderGroundBlock]
-updatetime = 15
-key = <WUNDERGROUND_KEY>
-folder = weather
-iconscale = (220,220)
-iconpos = (0,0)
-weathertypepos = (260,242)
-temperaturepos = (240,50)
-humiditypos = (620,98)
-pressurepos = (620,170)
-windpos = (620,26)
-weathertypefontname = Helvetica
-weathertypefontsize = 64
-weathertypefontbold = True
-weathertypefontitalic = False
-temperaturefontname = Helvetica
-temperaturefontsize = 160
-temperaturefontbold = True
-temperaturefontitalic = False
-humidityfontname = Helvetica
-humidityfontsize = 64
-humidityfontbold = False
-humidityfontitalic = False
-pressurefontname = Helvetica
-pressurefontsize = 64
-pressurefontbold = False
-pressurefontitalic = False
-windfontname = Helvetica
-windfontsize = 64
-windfontbold = False
-windfontitalic = False
 
 [YandexNewsBlock]
 fontname = Helvetica
