--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -157,12 +157,15 @@ updatetime = 10
 blocklist = Calendar, YandexWeather, MT8057
 
 [TimeBlock]
+formattext = Московское время {:%H:%M}
+text = {:%H:%M}
 fontname = FreeSans
 fontsize = 500
 fontbold = True
 fontitalic = False
-format = {:%H:%M}
-formattext = Московское время {:%H:%M}
+pos = (960, 540)
+alignx = Center
+aligny = Center
 
 [VoiceBlock]
 speaker = omazh
