--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -157,12 +157,15 @@ updatetime = 5
 blocklist = Calendar, MT8057, YandexWeather, BME280
 
 [TimeBlock]
+formattext = Московское время {:%H:%M}
+text = {:%H:%M}
 fontname = Helvetica
 fontsize = 400
 fontbold = True
 fontitalic = False
-format = {:%H:%M}
-formattext = Московское время {:%H:%M}
+pos = (960, 540)
+alignx = Center
+aligny = Center
 
 [VoiceBlock]
 speaker = omazh
