--- a/setting_win.ini
+++ b/setting_win.ini
@@ -65,7 +65,7 @@ critcolor = (255, 63, 63)
 formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
 co2text = Концентрация CO2: {0}
 co2fontname = Helvetica
-co2fontsize = 140
+co2fontsize = 160
 co2fontbold = True
 co2fontitalic = False
 co2pos = (960, 60)
@@ -154,15 +154,18 @@ windfontitalic = False
 
 [SwapBlock]
 updatetime = 5
-blocklist = Calendar, BME280, MT8057, OpenWeatherMap, YandexWeather
+blocklist = Calendar, BME280, MT8057, YandexWeather
 
 [TimeBlock]
+formattext = Московское время {:%H:%M}
+text = {:%H:%M}
 fontname = Helvetica
 fontsize = 400
 fontbold = True
 fontitalic = False
-format = {:%H:%M}
-formattext = Московское время {:%H:%M}
+pos = (960, 540)
+alignx = Center
+aligny = Center
 
 [VoiceBlock]
 speaker = omazh
