--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -20,17 +20,31 @@ module = Voice
 
 [BME280Block]
 address = 118
-fontname = Helvetica
-fontsize = 70
-fontbold = True
-fontitalic = False
-temperaturetext = Температура {0:+.1f}°
-humiditytext = Влажность {1:.0f}
-pressuretext = Давление {2:.0f}
-temperaturepos = (100,10)
-humiditypos = (100,100)
-pressurepos = (100,190)
 formattext = Тепература={0:.0f}, Влажность={1:.0f}, Давление={2:.0f}
+temperaturetext = Температура {0:+.1f}°
+temperaturefontname = Helvetica
+temperaturefontsize = 120
+temperaturefontbold = True
+temperaturefontitalic = False
+temperaturepos = (960, 10)
+temperaturealignx = Center
+temperaturealigny = Top
+humiditytext = Влажность {1:.0f}, Давление {2:.0f}
+humidityfontname = Helvetica
+humidityfontsize = 120
+humidityfontbold = True
+humidityfontitalic = False
+humiditypos = (960, 200)
+humidityalignx = Center
+humidityaligny = Top
+pressuretext = 
+pressurefontname = Helvetica
+pressurefontsize = 120
+pressurefontbold = True
+pressurefontitalic = False
+pressurepos = (0, 0)
+pressurealignx = Left
+pressurealigny = Top
 
 [CalendarBlock]
 formattext = {4}, {0} {1} {2} год
@@ -94,7 +108,7 @@ sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NI
 starttime = 00:00:00
 idletime = 1
 backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
+foregroundcolor = (31, 31, 31)
 
 [SCHEMA_MORNING]
 starttime = 07:00:00
@@ -118,7 +132,7 @@ foregroundcolor = (255, 255, 255)
 starttime = 23:00:00
 idletime = 3
 backgroundcolor = (0, 0, 0)
-foregroundcolor = (63, 63, 63)
+foregroundcolor = (31, 31, 31)
 
 [OpenWeatherMapBlock]
 updatetime = 15
