--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -26,7 +26,7 @@ temperaturefontname = Helvetica
 temperaturefontsize = 120
 temperaturefontbold = True
 temperaturefontitalic = False
-temperaturepos = (960, 10)
+temperaturepos = (960, 30)
 temperaturealignx = Center
 temperaturealigny = Top
 humiditytext = Влажность {1:.0f}, Давление {2:.0f}
@@ -79,18 +79,18 @@ critcolor = (255, 63, 63)
 formattext = Концентрация CO2: {0}.Температура: {1:+.1f}.
 co2text = Концентрация CO2: {0}
 co2fontname = FreeSans
-co2fontsize = 120
+co2fontsize = 150
 co2fontbold = True
 co2fontitalic = False
-co2pos = (52, 30)
-co2alignx = Left
+co2pos = (960, 100)
+co2alignx = Center
 co2aligny = Top
-temptext = Температура: {1:+.1f}°
+temptext = 
 tempfontname = FreeSans
-tempfontsize = 120
+tempfontsize = 140
 tempfontbold = True
 tempfontitalic = False
-temppos = (150, 160)
+temppos = (0, 0)
 tempalignx = Left
 tempaligny = Top
 
