--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -53,9 +53,9 @@ fontname = Helvetica
 fontsize = 170
 fontbold = True
 fontitalic = False
-pos = (960, 80)
+pos = (960, 200)
 alignx = Center
-aligny = Top
+aligny = Center
 
 [IRBlock]
 key_0 = Voice,
@@ -82,9 +82,9 @@ co2fontname = Helvetica
 co2fontsize = 140
 co2fontbold = True
 co2fontitalic = False
-co2pos = (960, 60)
+co2pos = (960, 200)
 co2alignx = Center
-co2aligny = Top
+co2aligny = Center
 temptext = 
 tempfontname = Helvetica
 tempfontsize = 140
@@ -216,9 +216,9 @@ iconscale = (220,220)
 iconpos = (100,0)
 weathertypepos = (360,242)
 temperaturepos = (360,50)
-humiditypos = (700,98)
-pressurepos = (700,170)
-windpos = (700,26)
+humiditypos = (760,98)
+pressurepos = (760,170)
+windpos = (760,26)
 weathertypefontname = Helvetica
 weathertypefontsize = 64
 weathertypefontbold = True
