--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -99,7 +99,7 @@ fullscreen = True
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher
+blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, IR
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
