--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -70,6 +70,10 @@ key_8 = Voice,
 key_9 = Voice,
 key_channeldown = Swap,-1
 key_channelup = Swap,1
+key_volumeup = Volume,+
+key_volumedown = Volume,-
+key_power = Volume,off
+key_stop = Volume,on
 
 [MT8057Block]
 warn = 800
@@ -99,7 +103,7 @@ fullscreen = True
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, IR
+blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, Volume, IR
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -186,6 +190,9 @@ speaker = omazh
 speed = 1.0
 key = <YANDEXVOICE_KEY>
 blocklist = Time, Swap, YandexNews
+
+[VolumeBlock]
+volume = 50
 
 [WatcherBlock]
 weekday = 0, 1, 2, 3, 4
