--- a/setting_win.ini
+++ b/setting_win.ini
@@ -99,7 +99,7 @@ fullscreen = False
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, IR
+blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, Volume, IR
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -186,6 +186,9 @@ speaker = omazh
 speed = 1.0
 key = <YANDEXVOICE_KEY>
 blocklist = Time, Swap, YandexNews
+
+[VolumeBlock]
+volume = 50
 
 [WatcherBlock]
 weekday = 0, 1, 2, 3, 4
