--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -103,7 +103,7 @@ fullscreen = True
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
-blocklist = Time, Swap, YandexNews, Voice, Alarm, Watcher, Volume, IR
+blocklist = Time, Swap, YandexNews, Player, Voice, Alarm, Watcher, Volume, IR
 
 [TIMELINE]
 sections = SCHEMA_NIGHT_1, SCHEMA_MORNING, SCHEMA_DAY, SCHEMA_EVENING, SCHEMA_NIGHT_2
@@ -190,6 +190,7 @@ speaker = omazh
 speed = 1.0
 key = <YANDEXVOICE_KEY>
 blocklist = Time, Swap, YandexNews
+player = Player
 
 [VolumeBlock]
 volume = 50
