--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,7 +26,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=21 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pip install pytest
+        pip install pytest pytest-mock
         pytest -v
     - name: Deployment
       env:
