--- a/setting_win.ini
+++ b/setting_win.ini
@@ -136,7 +136,7 @@ foregroundcolor = (31, 31, 31)
 
 [OpenWeatherMapBlock]
 updatetime = 15
-key = <OPENWEATHERMAP_KEY>
+key = b5561ca2d2e87158e97b7333779623f8
 folder = weather
 iconscale = (256,256)
 iconpos = (0,0)
@@ -184,7 +184,7 @@ aligny = Center
 [VoiceBlock]
 speaker = omazh
 speed = 1.0
-key = <YANDEXVOICE_KEY>
+key = b55d97e9-6c66-4e1b-966f-c2a6aa9d939d
 blocklist = Time, Swap, YandexNews
 player = Player
 
