--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -59,9 +59,9 @@ aligny = Center
 
 [IRBlock]
 key_0 = Voice,Ноль
-key_1 = Voice,Жопа
-key_2 = Voice,Попа
-key_3 = Voice,Опа, ни хуя!
+key_1 = Voice,
+key_2 = Voice,
+key_3 = Voice,
 key_4 = Voice,
 key_5 = Voice,
 key_6 = Voice,
