--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -194,6 +194,13 @@ player = Player
 
 [VolumeBlock]
 volume = 50
+fontname = Helvetica
+fontsize = 80
+fontbold = False
+fontitalic = False
+pos = (1820, 40)
+alignx = Center
+aligny = Center
 
 [WatcherBlock]
 weekday = 0, 1, 2, 3, 4
