--- a/setting_win.ini
+++ b/setting_win.ini
@@ -9,7 +9,7 @@ weekday = 0, 1, 2, 3, 4
 duration = 30
 backgroundcolor = (255, 0, 0)
 foregroundcolor = (255, 255, 255)
-file = /home/pi/DashBoard/music/happy three frend.mp3
+file = L:\Repos\DashBoard\music\happy three frend.mp3
 
 [AlarmVoice]
 type = 4
@@ -190,6 +190,7 @@ player = Player
 
 [VolumeBlock]
 volume = 50
+text = {0}%
 fontname = Helvetica
 fontsize = 80
 fontbold = False
