--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -88,7 +88,7 @@ jobs:
         zip build -R ext modules music weather "*.py" "*.ini" "*.sh" "*.cmd" "*.txt" "*.mp3" "*.png" ".gif" -x test/*
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1.0.0
+      uses: actions/create-release@v1.1.4   # https://github.com/actions/create-release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -98,7 +98,7 @@ jobs:
         prerelease: true
     - name: Upload Release Asset
       id: upload-release-asset 
-      uses: actions/upload-release-asset@v1.1.4
+      uses: actions/upload-release-asset@v1.0.2 # https://github.com/actions/upload-release-asset/
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
