--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -96,6 +96,8 @@ tempaligny = Top
 
 [MAIN]
 fullscreen = True
+pir = PH5
+led = PL9
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
