--- a/setting_rasppi.ini
+++ b/setting_rasppi.ini
@@ -100,6 +100,8 @@ tempaligny = Top
 
 [MAIN]
 fullscreen = True
+pir = 24
+led = 23
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
