--- a/setting_win.ini
+++ b/setting_win.ini
@@ -96,6 +96,8 @@ tempaligny = Top
 
 [MAIN]
 fullscreen = False
+pir = 
+led = 
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
