--- a/setting_opiwin.ini
+++ b/setting_opiwin.ini
@@ -96,8 +96,8 @@ tempaligny = Top
 
 [MAIN]
 fullscreen = True
-pir = PH5
-led = PL9
+pir = 11
+led = 16
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
