--- a/setting_win.ini
+++ b/setting_win.ini
@@ -96,8 +96,8 @@ tempaligny = Top
 
 [MAIN]
 fullscreen = False
-pir = 
-led = 
+pir = 0
+led = 0
 idletime = 5
 backgroundcolor = (0, 0, 0)
 foregroundcolor = (64, 64, 64)
