--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ markers =
     block_alarm: block_alarm
 	block_calendar: block_calendar
 	block_ir: block_ir
+    block_main: block_main
 	block_mt8057: block_mt8057
 	block_openweathermap: block_openweathermap
 	block_swap: block_swap
